@@ -1489,22 +1489,6 @@ extern "C" {
 #endif
 #define WM_MOUSEHOVER	0x2A1
 #define WM_MOUSELEAVE	0x2A3
-#if (WINVER >= 0x0400)
-#define WM_IME_CHAR 0x0286
-#define WM_IME_COMPOSITION 0x010F
-#define WM_IME_COMPOSITIONFULL 0x0284
-#define WM_IME_CONTROL 0x0283
-#define WM_IME_ENDCOMPOSITION 0x010E
-#define WM_IME_KEYDOWN 0x0290
-#define WM_IME_KEYUP 0x0291
-#define WM_IME_NOTIFY 0x0282
-#define WM_IME_SELECT 0x0285
-#define WM_IME_SETCONTEXT 0x0281
-#define WM_IME_STARTCOMPOSITION 0x010D
-#endif
-#if (_WIN32_WINNT >= 0x0500)
-#define WM_IME_REQUEST 0x0288
-#endif
 #if (_WIN32_WINNT >= 0x0400)
 #define WHEEL_DELTA 120
 #define GET_WHEEL_DELTA_WPARAM(wparam) ((short)HIWORD (wparam))
